@@ -1,15 +1,11 @@
 package com.WeimarJr.ApiDeNotasETarefas.ApiCrudDeNotasETarefas.Services;
 
 import com.WeimarJr.ApiDeNotasETarefas.ApiCrudDeNotasETarefas.Entidades.Nota;
-import com.WeimarJr.ApiDeNotasETarefas.ApiCrudDeNotasETarefas.Entidades.Tarefa;
 import com.WeimarJr.ApiDeNotasETarefas.ApiCrudDeNotasETarefas.Exceptions.ExceptionsNota;
 import com.WeimarJr.ApiDeNotasETarefas.ApiCrudDeNotasETarefas.repository.NotaRepository;
-import com.WeimarJr.ApiDeNotasETarefas.ApiCrudDeNotasETarefas.repository.TarefaRepository;
-import org.aspectj.weaver.ast.Not;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.extension.ExtendWith;
-import org.junit.jupiter.api.function.Executable;
 import org.mockito.InjectMocks;
 import org.mockito.Mock;
 import org.mockito.junit.*;
@@ -28,13 +24,8 @@ class NotaServiceTest {
     @InjectMocks
     NotaService notaService;
 
-    @InjectMocks
-    TarefaService tarefaService;
-
     @Mock
     NotaRepository notaRepository;
-    @Mock
-    TarefaRepository tarefaRepository;
 
     private Nota nota1;
     private Nota nota2;
@@ -44,13 +35,13 @@ class NotaServiceTest {
     void objetosParaTeste()
     {
         nota1 = new Nota();
-        nota1.setId(12l);
+        nota1.setId(12L);
         nota1.setTituloNota("primeria nota para teste");
         nota1.setNota("essa é a primeira vez que eu faço um teste unitario");
         nota1.setTag("teste");
 
         nota2 = new Nota();
-        nota2.setId(22l);
+        nota2.setId(22L);
         nota2.setTituloNota("segunda nota para teste");
         nota2.setNota("espero aprender bem");
         nota2.setTag("teste");
@@ -111,7 +102,7 @@ class NotaServiceTest {
 
 
 
-        assertEquals(tituloEsperado, listaComOObjetoEsperado.get(0).getTituloNota());
+        assertEquals(tituloEsperado, listaComOObjetoEsperado.getFirst().getTituloNota());
 
         verify(notaRepository, times(2)).findAll();
         verify(notaRepository, times(2)).save(nota2Editada);
@@ -123,12 +114,10 @@ class NotaServiceTest {
     void deveDarErroEmEditarNota()
     {
         Nota notaNova = new Nota();
-        notaNova.setId(123l);
+        notaNova.setId(123L);
         when(notaRepository.findById(notaNova.getId())).thenReturn(Optional.empty());
 
-        ExceptionsNota excecao = assertThrows(ExceptionsNota.class, () -> {
-            notaService.editarNota(notaNova);
-        });
+        ExceptionsNota excecao = assertThrows(ExceptionsNota.class, () -> notaService.editarNota(notaNova));
 
         assertEquals("não existe nota com esse id.", excecao.getMessage());
 
@@ -151,7 +140,7 @@ class NotaServiceTest {
         notaService.deletarNota(nota1.getId());
         List<Nota> listaResultado = notaService.listarNotas();
         assertEquals(listaEsperada, listaResultado);
-        assertEquals(nota2.getId(), listaResultado.get(0).getId());
+        assertEquals(nota2.getId(), listaResultado.getFirst().getId());
 
         verify(notaRepository, times(4)).findAll();
         verify(notaRepository, times(2)).deleteById(nota1.getId());
@@ -162,7 +151,7 @@ class NotaServiceTest {
     void deveDarExcecaoEmDeletarNota()
     {
         Nota notaNova = new Nota();
-        notaNova.setId(123l);
+        notaNova.setId(123L);
 
         when(notaRepository.findById(notaNova.getId())).thenReturn(Optional.empty());
 
@@ -170,7 +159,10 @@ class NotaServiceTest {
             notaService.deletarNota(notaNova.getId());
         });
 
+        assertEquals("não existe nota com esse id.", execao.getMessage());
+        verify(notaRepository, times(0)).deleteById(notaNova.getId());
         verify(notaRepository, times(1)).findById(notaNova.getId());
+        System.out.println(execao.getMessage());
 
     }
 
@@ -209,23 +201,5 @@ class NotaServiceTest {
         verify(notaRepository, times(1)).findAllByTag(tagTeste);
     }
 
-    @Test
-    void deveDeletarTarefaDaNota()
-    {
-        List<Tarefa> listaEsperada = new ArrayList<>();
-        Tarefa tarefaTeste = new Tarefa();
-        tarefaTeste.setId(123l);
-        nota1.setTarefa(tarefaTeste);
-        notaService.criarNota(nota1);
-        when(notaRepository.findById(nota1.getId())).thenReturn(Optional.of(nota1));
-
-        notaService.deletarTarefaDeNota(nota1.getId(), tarefaTeste.getId());
-        List<Tarefa> listaResultado = nota1.getTarefasRelacionadas();
-        assertEquals(listaEsperada, listaResultado);
-
-        verify(notaRepository, times(2)).save(nota1);
-        verify(tarefaRepository, times(1)).save(tarefaTeste);
-
-    }
 
 }
